Tst/Tests/Neg/Submachines/MultipleStarts.p
main machine Entry {
    submachine Foo {
        start state Bar {
            entry {
            }
        }
    }

    submachine Foo1 {
        start state Bar1 {
        }
    }
}
